# open-fake-clawd

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  OPTIMIZATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  REFACTORING_SUMMARY.md  check-glm-config.sh  deploy.sh  docker-compose.yml  fix-docker.sh  generate_mock_data.py  install-webhook-service.sh  pyproject.toml  quick-start.sh  requirements.txt  restart-glm.sh  setup-git-hooks.sh  setup-github.sh  update-and-restart.sh  update.sh  webhook-server.py
.github/workflows/: deploy.yml
backend/: __init__.py  config.py  main.py
backend/api/: routes.py
backend/bot/: handlers.py  middleware.py
backend/claude/: __init__.py  providers.py  runner.py  session.py
backend/db/: models.py
backend/memory/: manager.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/router/: index.ts
frontend/src/stores/: memory.ts  sessions.ts  stats.ts  theme.ts
frontend/src/views/: Dashboard.vue  Memory.vue  SessionDetail.vue  Sessions.vue  Settings.vue
workspace/: AGENTS.md  SOUL.md  TOOLS.md  USER.md
